<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>all</artifactId>
        <groupId>com.engineersbox.continuity</groupId>
        <version>0.1.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>lang</artifactId>
    <name>lang</name>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>

        <!-- ANTLR4 -->
        <antlr4.source.dir>${project.basedir}/src/main/antlr4</antlr4.source.dir>
        <antlr4.output.dir>${project.basedir}/src/main/java/com/engineersbox/continuity/lang/antlr</antlr4.output.dir>
    </properties>

    <dependencies>
        <!-- ANTLR4 -->
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>antlr4</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <sourceDirectory>${antlr4.source.dir}</sourceDirectory>
                    <outputDirectory>${antlr4.output.dir}</outputDirectory>
<!--                    <atn>true</atn>-->
                    <visitor>true</visitor>
                    <listener>true</listener>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>